<resources>    <string name="app_name">Galaxy Admin</string>    <string name="search_title">Search</string>    <string name="menu_delete">Delete</string>    <string name="forgot_password">Forgot Password ?</string>    <string name="not_register">Not Register Yet ?</string>    <string name="keep_me_loggedIn">Keep Me Logged In</string>    <string name="ofs">Open For Subscription</string>    <string name="ianround">IAN Round</string>    <string name="byleads">By Leads</string>    <string name="remaining">Remaining Investment</string>    <string name="deafultdate">24/03/2016</string>    <string name="externalinvest">External Investment</string>    <string name="required">Required</string>    <string name="lead">Leads</string>    <string name="remaininvestor">Remaining Investors</string>    <string name="tranches">Tranches</string>    <string name="subscripdetails">SUBSCRIPTION DETAILS</string>    <string name="changeurl">Change URL</string>    <string name="sort_heading">Sort Deals By</string>    <string name="work_in_progress">This feature is coming soon</string>    <string name="record_deleted">This Event is deleted</string>    <string-array name="expandable_heading">        <item>Deals</item>        <item>Membership</item>        <item>Calendar</item>        <item>About IAN</item>        <item>Events</item>        <item>News</item>        <item>Change Password</item>        <item>Logout</item>    </string-array>    <string-array name="expandable_group_heading">        <item>Deals</item>        <item>Calendar</item>        <item>About IAN</item>        <item>Events</item>        <item>News</item>        <item>Change Password</item>        <item>Logout</item>    </string-array>    <string-array name="expandable_heading_admin">        <item>Deals</item>        <item>Calendar</item>        <item>About IAN</item>        <item>Events</item>        <item>News</item>        <item>Change Password</item>        <item>Logout</item>    </string-array>    <string-array name="enterepenure_expandable_heading">        <item>My Deals</item>        <item>Calendar</item>        <item>About IAN</item>        <item>Events</item>        <item>News</item>        <item>Change Password</item>        <item>Logout</item>    </string-array>    <string-array name="deals">        <item>Favourite</item>        <item>New</item>        <item>EP</item>        <item>SubGroup</item>        <item>TermSheet</item>        <item>Investment Announcement</item>        <item>Investor Call</item>        <item>Open For Subscription</item>        <item>Closed For Subscription</item>        <item>Committed</item>    </string-array>    <string-array name="membership">        <item>New</item>        <item>Awaited</item>        <item>Recommended</item>        <item>Declined</item>    </string-array>    <string-array name="membership_admin">        <item>New</item>        <item>Pending</item>        <item>Approved</item>        <item>Disapproved</item>    </string-array>    <string-array name="planets_array">        <item>Mercury</item>        <item>Venus</item>        <item>Earth</item>        <item>Mars</item>        <item>Jupiter</item>        <item>Saturn</item>        <item>Uranus</item>        <item>Neptune</item>    </string-array>    <string-array name="drawer_icon">        <item>@drawable/deals_icon</item>        <item>@drawable/membership_icon</item>        <item>@drawable/calendar_icon</item>        <item>@drawable/ian_menu_icon</item>        <item>@drawable/events_icon</item>        <item>@drawable/news_icon</item>        <item>@drawable/change_password_icon</item>        <item>@drawable/logout_icon</item>        <item>@drawable/ic_attachment</item>    </string-array>    <string-array name="drawer_group_icon">        <item>@drawable/deals_icon</item>        <item>@drawable/calendar_icon</item>        <item>@drawable/ian_menu_icon</item>        <item>@drawable/events_icon</item>        <item>@drawable/news_icon</item>        <item>@drawable/change_password_icon</item>        <item>@drawable/logout_icon</item>        <item>@drawable/ic_attachment</item>    </string-array>    <string-array name="calander">        <!--        <item>Pitch Sessions</item>-->        <item>Meetings</item>    </string-array>    <string name="title_activity_base">IANAPP</string>    <!-- Strings related to login -->    <string name="prompt_email">Login ID</string>    <string name="prompt_password">PIN</string>    <string name="action_sign_in">Submit </string>    <string name="venture_name">Venture Name </string>    <string name="investor_name">Investor Name </string>    <string name="action_sign_in_short">Log in</string>    <string name="old_password">Current Password*</string>    <string name="change_password">Change Password*</string>    <string name="change_url">Change URL</string>    <string name="total_investor">Total Investors</string>    <string name="lead_members">Lead Members</string>    <string name="cancel">Cancel</string>    <string name="submit">Submit</string>    <string name="new_password">Enter New Password*</string>    <string name="confirm_password">Re-enter New Password*</string>    <string name="email_address">Email</string>    <string name="type_a_comment">   Type a Comment</string>    <string name="enter_amount">Enter Amount*</string>    <string name="committed">Committed</string>    <string name="forgot_password_text">To get register just contact Murtuza Sultani to call Now click on the Call Now Button.</string>    <string name="permission_rationale">"Contacts permissions are needed for providing email        completions."    </string>    <string name="no_internet_connection">No Internet Connection \n Please Try Again</string>    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="reamining_investment">Remaining Investment</string>    <string name="please_put_your_commitment_below">Please put your commitment below</string>    <string name="decleration">I understand the risks in IAN ..</string>    <string name="commit">I have done my due diligence..</string>    <string name="comitment_validation_msg">Please Enter Comitment Amount</string>    <string name="tranch_details">Tranche Details</string>    <string name="about">When one takes a step back and reflects upon the incredible developments in the mobile sectors, it’s almost shocking how fast they have arrived. Phones grew in size, displays increased in resolution, processor plowed through with power, and even cameras captivated with some stunning shooters.Of course, the market itself has also changed from what it once was some 8 years ago. Many of the key players have either seen their presence significantly reduced – HTC, for example –  or else – like Sony – never saw mainstream success to begin with. Perhaps no company is facing challenges as high as Samsung however, who according to a new report from Korea, has decided to make a major change to its smartphone sales structure.The news come via The Korea Times, which interviewed an unnamed Samsung executive who explained that:</string>    <string name="empty_list">No Records Found</string>    <string name="entrepreneur">Entrepreneur</string>    <string name="deals">Deals</string>    <string name="assignee">Assignee</string>    <string name="attendees">Attendees</string>    <string name="hello">Hello World, LoadMoreListView!</string>    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>    <string name="pull_to_refresh_release_label">Release to refresh...</string>    <string name="pull_to_refresh_refreshing_label">Loading...</string>    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>    <string name="title_activity_dashboard">DashboardActivity</string>    <string name="navigation_drawer_open">Open navigation drawer</string>    <string name="navigation_drawer_close">Close navigation drawer</string>    <string name="action_settings">Settings</string></resources>