<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:gravity="center_horizontal"    android:background="@color/login_bg"    android:orientation="vertical"    android:paddingLeft="@dimen/activity_horizontal_margin"    android:paddingRight="@dimen/activity_horizontal_margin"    tools:context="com.dotcom.jamaatAdmin.activity.Common.LoginActivity">    <!-- Login progress -->    <ProgressBar        android:id="@+id/login_progress"        style="?android:attr/progressBarStyleLarge"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginBottom="8dp"        android:visibility="gone" />    <TextView    android:id="@+id/changeUrl"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:gravity="center"        android:paddingTop="@dimen/dimen_20_dp"        android:visibility="gone"        android:textColor="@color/link_color"        android:layout_gravity="right"        style="@style/TextAppearanceRegular.FontPath"        android:text="@string/changeurl"/>    <ScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        >        <LinearLayout            android:id="@+id/login_form"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:layout_gravity="center"            >            <LinearLayout                android:layout_height="wrap_content"                android:layout_width="match_parent"                android:orientation="vertical"                android:layout_gravity="center"                android:gravity="center"                >                <ImageView                    android:id="@+id/ian_logo"                    android:layout_width="wrap_content"                    android:layout_height="80dp"                    android:src="@drawable/logo"                    android:layout_gravity="center"                   />                <LinearLayout                    android:id="@+id/email_login_form"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginTop="@dimen/dimen_login_top"                    android:orientation="vertical">                    <LinearLayout                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:gravity="center"                        android:orientation="horizontal">                        <ImageView                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_gravity="center"                            android:layout_marginTop="@dimen/dimen_2_dp"                            android:layout_marginRight="@dimen/dimen_5_dp"                            android:src="@drawable/ic_person_outline_white_24dp"/>                        <android.support.design.widget.TextInputLayout                            android:id="@+id/id_layout"                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"                            android:textColorHint="@color/white"                            android:layout_width="match_parent"                            android:layout_height="wrap_content">                            <EditText                                android:id="@+id/email"                                android:layout_width="match_parent"                                android:layout_height="wrap_content"                                android:hint="@string/prompt_email"                                android:textColorHint="@color/white"                                android:backgroundTint="@color/white"                                android:inputType="phone"                                android:textSize="@dimen/dimen_xlarge"                                android:textColor="@color/white"                                android:maxLines="1"                                android:theme="@style/MyEditTextTheme"                                style="@style/TextAppearanceRegular.FontPath"                                android:singleLine="true" />                        </android.support.design.widget.TextInputLayout>                    </LinearLayout>                    <LinearLayout                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:layout_marginTop="@dimen/dimen_15_dp"                        android:gravity="center"                        android:orientation="horizontal">                        <ImageView                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_marginTop="@dimen/dimen_2_dp"                            android:layout_marginRight="@dimen/dimen_5_dp"                            android:src="@drawable/ic_lock_outline_white_24dp"/>                        <android.support.design.widget.TextInputLayout                            android:id="@+id/pin_layout"                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"                            android:textColorHint="@color/white"                            android:layout_width="match_parent"                            android:layout_height="wrap_content">                            <EditText                                android:id="@+id/password"                                android:layout_width="match_parent"                                android:layout_height="wrap_content"                                android:hint="@string/prompt_password"                                android:imeActionId="@+id/login"                                android:textColorHint="@color/white"                                android:backgroundTint="@color/white"                                android:theme="@style/MyEditTextTheme"                                android:textSize="@dimen/dimen_xlarge"                                android:textColor="@color/white"                                android:imeActionLabel="@string/action_sign_in_short"                                android:imeOptions="actionUnspecified"                                android:inputType="numberPassword"                                android:maxLines="1"                                style="@style/TextAppearanceRegular.FontPath"                                android:singleLine="true" />                        </android.support.design.widget.TextInputLayout>                    </LinearLayout>                    <LinearLayout                        android:layout_height="wrap_content"                        android:layout_width="wrap_content"                        android:layout_marginTop="25dp"                        android:visibility="gone"                        >                        <TextView                            android:id="@+id/loggedin_textView"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:textSize="@dimen/dimen_16_sp"                            android:textColor="@color/black"                            android:gravity="left"                            android:layout_marginLeft="@dimen/dimen_30_dp"                            style="@style/TextAppearanceRegular.FontPath"                            android:text="@string/keep_me_loggedIn"/>                        <View                            android:layout_width="match_parent"                            android:layout_height="@dimen/dimen_0_dp"                            android:layout_weight="1"                            />                        <ToggleButton                            android:layout_width="@dimen/dimen_40_dp"                            android:layout_height="@dimen/dimen_22_dp"                            android:text="New ToggleButton"                            android:checked="true"                            android:textOff=""                            android:textOn=""                            android:background="@drawable/toggle_selector"                            android:id="@+id/keepMeLoggedInButton" />                    </LinearLayout>                    <Button                        android:id="@+id/email_sign_in_button"                        style="@style/TextAppearanceRegular.FontPath"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:layout_marginTop="@dimen/dimen_30_dp"                        android:elevation="@dimen/dimen_5_dp"                        android:background="@color/button_color"                        android:textColor="@color/white"                        android:text="@string/action_sign_in"                        android:textStyle="bold" />                    <TextView                        android:id="@+id/forgot_password_textView"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:gravity="center"                        android:layout_marginTop="@dimen/dimen_35_dp"                        android:textColor="@color/white"                        android:layout_marginBottom="@dimen/dimen_40_dp"                        android:layout_gravity="center"                        style="@style/TextAppearanceRegular.FontPath"                        android:text="@string/not_register"/>                </LinearLayout>            </LinearLayout>        </LinearLayout>    </ScrollView></LinearLayout>